Fixing build script with liquid

--- a/app/_includes/foot.html
+++ b/app/_includes/foot.html
@@ -1,5 +1,5 @@
 
-    <div class="footer">
+    <div class="col-12 footer">
       <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Resource Page</a></li>
         <li class="list-inline-item"><a href="#">Key Terms</a></li>
