--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,56 +36,33 @@ body {
   line-height: 3rem;
 }
 
+/* Add spacing between sections */
+.body {
+  margin-bottom: 2rem;
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 1.5rem;
   color: #777;
   border-top: .05rem solid #e5e5e5;
 }
-//
-// /* Customize container */
-// // @media (min-width: 48em) {
-// //   .container {
-// //     max-width: 46rem;
-// //   }
-// // }
-// // .container-narrow > hr {
-// //   margin: 2rem 0;
-// // }
-//
-// /* Main marketing message and sign up button */
-// .jumbotron {
-//   text-align: center;
-//   border-bottom: .05rem solid #e5e5e5;
-// }
-// .jumbotron .btn {
-//   padding: .75rem 1.5rem;
-//   font-size: 1.5rem;
-// }
-//
-// /* Supporting marketing content */
-// .marketing {
-//   margin: 3rem 0;
-// }
-// .marketing p + h4 {
-//   margin-top: 1.5rem;
-// }
-//
-// /* Responsive: Portrait tablets and up */
-// @media screen and (min-width: 48em) {
-//   /* Remove the padding we set earlier */
-//   .header,
-//   .marketing,
-//   .footer {
-//     padding-right: 0;
-//     padding-left: 0;
-//   }
-//   /* Space out the masthead */
-//   .header {
-//     margin-bottom: 2rem;
-//   }
-//   /* Remove the bottom border on the jumbotron for visual effect */
-//   .jumbotron {
-//     border-bottom: 0;
-//   }
-// }
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 48em) {
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 2rem;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
