adding empty html files

--- a/app/_includes/change.html
+++ b/app/_includes/change.html
@@ -5,17 +5,18 @@
 <div class="row body">
   <div class="col-lg-4">
     <div class="list-group">
-      <a class="list-group-item list-group-item-action" href="#">In my school</a>
-      <a class="list-group-item list-group-item-action" href="change-family.html">In my family</a>
-      <a class="list-group-item list-group-item-action" href="#">In my povince/territory</a>
-      <a class="list-group-item list-group-item-action" href="#">In my community</a>
-      <a class="list-group-item list-group-item-action" href="#">In Canada</a>
-      <a class="list-group-item list-group-item-action" href="#">In my First Nation</a>
-      <a class="list-group-item list-group-item-action" href="#">In my Innuit Community</a>
-      <a class="list-group-item list-group-item-action" href="#">In my city/town</a>
-      <a class="list-group-item list-group-item-action" href="#">In my Metis Nation</a>
-      <a class="list-group-item list-group-item-action" href="#">In the world</a>
-      <a class="list-group-item list-group-item-action" href="#">With the police</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-indigenous-school.html">In my indigenous school</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-non-indigenous-school.html">In my non-indigenous school</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-family.html">In my family</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-province-territory.html">In my povince/territory</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-community.html">In my community</a>
+      <a class="list-group-item list-group-item-action" href="change-in-canada.html">In Canada</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-first-nation.html">In my First Nation</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-innuit-community.html"></a>In my Innuit Community</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-city-town.html">In my city/town</a>
+      <a class="list-group-item list-group-item-action" href="change-in-my-metis-nation.html">In my Metis Nation</a>
+      <a class="list-group-item list-group-item-action" href="change-in-the-world.html">In the world</a>
+      <a class="list-group-item list-group-item-action" href="change-with-the-police.html">With the police</a>
     </div>
   </div>
 </div>
